--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </div>
     <div class="single-table">
         <div class="graph-container">
+            <h1>Percentage Profit Product</h1>
             <div class="graph" id="prod_percent_graph"></div>
         </div>
     </div>
@@ -43,12 +44,15 @@
         <div class="row">
             <div class="column">
                 <div class="graph-container">
+                    <h2>Gross Sales of Products</h2>
                     <div class="graph" id="gross_sales_graph"></div>
                 </div>
             </div>
             <div class="column">
                 <div class="graph-container">
+                    <h2>Total unit Sold every month</h2>
                     <select id="prod_unit_filter">
+                        <option value="all">All</option>
                         <option value="2013">2013</option>
                         <option value="2014">2014</option>
                     </select>
@@ -61,11 +65,13 @@
         <div class="row">
             <div class="column">
                 <div class="graph-container">
+                    <h2>Product Profit Based on Country</h2>
                     <div class="graph" id="prod_country_graph"></div>
                 </div>
             </div>
             <div class="column">
                 <div class="graph-container">
+                    <h2>Product Profit Based on Segment</h2>
                     <select id="prod_prof_filter">
                         <option value="cp">Channel Partners</option>
                         <option value="ent">Enterprise</option>
