--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
 <body>
@@ -121,13 +121,13 @@
             <div class="graph" id="tot_rev_graph"></div>
         </div>
     </div>
-    <script type="text/javascript" src="js/rev_dev_script.js"></script>
-    <script type="text/javascript" src="js/tot_rev_script.js"></script>
-    <script type="text/javascript" src="js/gross_sales_script.js"></script>
-    <script type="text/javascript" src="js/prod_prof_script.js"></script>
-    <script type="text/javascript" src="js/prod_sold_script.js"></script>
-    <script type="text/javascript" src="js/prod_unit_script.js"></script>
-    <script type="text/javascript" src="js/prod_percent_script.js"></script>
-    <script type="text/javascript" src="js/prod_country_script.js"></script>
+    <script type="text/javascript" src="rev_dev_script.js"></script>
+    <script type="text/javascript" src="tot_rev_script.js"></script>
+    <script type="text/javascript" src="gross_sales_script.js"></script>
+    <script type="text/javascript" src="prod_prof_script.js"></script>
+    <script type="text/javascript" src="prod_sold_script.js"></script>
+    <script type="text/javascript" src="prod_unit_script.js"></script>
+    <script type="text/javascript" src="prod_percent_script.js"></script>
+    <script type="text/javascript" src="prod_country_script.js"></script>
 </body>
 </html>
