--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <title>Product Summary</title>
 </head>
@@ -128,30 +128,30 @@
         <div class="creator">
             <div class="row">
                 <div class="column">
-                    <img src="image/vanessa.jpg"/>
+                    <img src="vanessa.jpg"/>
                     <p>2201741385</p>
                     <p>Vanessa Louise</p>
                 </div>
                 <div class="column">
-                    <img src="image/nadhifa.jpg"/>
+                    <img src="nadhifa.jpg"/>
                     <p>2201742860</p>
                     <p>Nadhifa Rachma Zalfa Sekar Arum</p>
                 </div>
                 <div class="column">
-                    <img src="image/hans.jpg"/>
+                    <img src="hans.jpg"/>
                     <p>2201801636</p>
                     <p>Hans Nugroho Gianto Hadiwijaya</p>
                 </div>
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="js/rev_dev_script.js"></script>
-    <script type="text/javascript" src="js/tot_rev_script.js"></script>
-    <script type="text/javascript" src="js/gross_sales_script.js"></script>
-    <script type="text/javascript" src="js/prod_prof_script.js"></script>
-    <script type="text/javascript" src="js/prod_sold_script.js"></script>
-    <script type="text/javascript" src="js/prod_unit_script.js"></script>
-    <script type="text/javascript" src="js/prod_percent_script.js"></script>
-    <script type="text/javascript" src="js/prod_country_script.js"></script>
+    <script type="text/javascript" src="rev_dev_script.js"></script>
+    <script type="text/javascript" src="tot_rev_script.js"></script>
+    <script type="text/javascript" src="gross_sales_script.js"></script>
+    <script type="text/javascript" src="prod_prof_script.js"></script>
+    <script type="text/javascript" src="prod_sold_script.js"></script>
+    <script type="text/javascript" src="prod_unit_script.js"></script>
+    <script type="text/javascript" src="prod_percent_script.js"></script>
+    <script type="text/javascript" src="prod_country_script.js"></script>
 </body>
 </html>
