--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
 <html>
+
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <title>Product Summary</title>
 </head>
+
 <body>
-    <div class = "overview-header">
-		<h1>Product Summary</h1>
+    <div class="overview-header">
+        <h1>Product Summary</h1>
         <div class="row">
             <div class="column">
-            <div class="card">
-                <h3>Unit Sold</h3>
-                <p>1,125,806 pcs</p>
-            </div>
+                <div class="card">
+                    <h3>Unit Sold</h3>
+                    <p>1,125,806 pcs</p>
+                </div>
             </div>
             <div class="column">
-            <div class="card">
-                <h3>Gross Sell</h3>
-                <p>127,931,598.5 USD</p>
+                <div class="card">
+                    <h3>Gross Sell</h3>
+                    <p>127,931,598.5 USD</p>
+                </div>
             </div>
-            </div>
-            
+
             <div class="column">
-            <div class="card">
-                <h3>Expenses</h3>
-                <p>101,832,648 USD</p>
+                <div class="card">
+                    <h3>Expenses</h3>
+                    <p>101,832,648 USD</p>
+                </div>
             </div>
-            </div>
-            
+
             <div class="column">
-            <div class="card">
-                <h3>Profit</h3>
-                <p>16,893,702.26 USD</p>
-            </div>
+                <div class="card">
+                    <h3>Profit</h3>
+                    <p>16,893,702.26 USD</p>
+                </div>
             </div>
         </div>
     </div>
@@ -42,7 +44,7 @@
             <div class="graph" id="prod_percent_graph"></div>
         </div>
     </div>
-    <div class = "double-table">
+    <div class="double-table">
         <div class="row">
             <div class="column">
                 <div class="graph-container">
@@ -58,12 +60,12 @@
                         <option value="2013">2013</option>
                         <option value="2014">2014</option>
                     </select>
-                    <div class="graph" id="prod_sold_graph"></div>              
+                    <div class="graph" id="prod_sold_graph"></div>
                 </div>
             </div>
         </div>
     </div>
-    <div class = "double-table">
+    <div class="double-table">
         <div class="row">
             <div class="column">
                 <div class="graph-container">
@@ -82,7 +84,7 @@
                         <option value="mid">Midmarket</option>
                         <option value="sb">Small Business</option>
                     </select>
-                  <div class="graph" id="prod_prof_graph"></div>
+                    <div class="graph" id="prod_prof_graph"></div>
                 </div>
             </div>
         </div>
@@ -90,37 +92,52 @@
     <div class="single-table">
         <div class="graph-container">
             <h1>Total Unit Sold Every Month</h2>
-            <select id="prod_unit_filter">
-                <option value="all">All Time</option>
-                <option value="2013">2013</option>
-                <option value="2014">2014</option>
-            </select>
-            <select id="prod_unit_filter2">
-                <option value="all">All Products</option>
-                <option value="am">Amarilla</option>
-                <option value="ca">Carretera</option>
-                <option value="mo">Montana</option>
-                <option value="pa">Paseo</option>
-                <option value="ve">Velo</option>
-                <option value="vtt">VTT</option>
-            </select>
-            <div class="graph" id="prod_unit_graph"></div>
+                <select id="prod_unit_filter">
+                    <option value="all">All Time</option>
+                    <option value="2013">2013</option>
+                    <option value="2014">2014</option>
+                </select>
+                <select id="prod_unit_filter2">
+                    <option value="all">All Products</option>
+                    <option value="am">Amarilla</option>
+                    <option value="ca">Carretera</option>
+                    <option value="mo">Montana</option>
+                    <option value="pa">Paseo</option>
+                    <option value="ve">Velo</option>
+                    <option value="vtt">VTT</option>
+                </select>
+                <div class="graph" id="prod_unit_graph"></div>
         </div>
     </div>
     <div class="single-table">
         <div class="graph-container">
             <h1>Revenue Development</h2>
-            <select id="rev_dev_filter">
-                <option value="all">All</option>
-                <option value="2013">2013</option>
-                <option value="2014">2014</option>
-            </select>
-            <div class="graph" id="rev_dev_graph"></div>
+                <select id="rev_dev_filter">
+                    <option value="all">All</option>
+                    <option value="2013">2013</option>
+                    <option value="2014">2014</option>
+                </select>
+                <div class="graph" id="rev_dev_graph"></div>
         </div>
     </div>
     <div class="single-table">
         <div class="graph-container">
             <h1>Total Revenue</h1>
+            <select id="tot_rev_filter">
+                <option value="all">All</option>
+                <option value="jan">January</option>
+                <option value="feb">February</option>
+                <option value="mar">March</option>
+                <option value="apr">April</option>
+                <option value="may">May</option>
+                <option value="june">June</option>
+                <option value="july">July</option>
+                <option value="aug">August</option>
+                <option value="sep">September</option>
+                <option value="oct">October</option>
+                <option value="nov">November</option>
+                <option value="dec">December</option>
+            </select>
             <div class="graph" id="tot_rev_graph"></div>
         </div>
     </div>
@@ -128,30 +145,31 @@
         <div class="creator">
             <div class="row">
                 <div class="column">
-                    <img src="vanessa.jpg"/>
+                    <img src="image/vanessa.jpg" />
                     <p>2201741385</p>
                     <p>Vanessa Louise</p>
                 </div>
                 <div class="column">
-                    <img src="nadhifa.jpg"/>
+                    <img src="image/nadhifa.jpg" />
                     <p>2201742860</p>
                     <p>Nadhifa Rachma Zalfa Sekar Arum</p>
                 </div>
                 <div class="column">
-                    <img src="hans.jpg"/>
+                    <img src="image/hans.jpg" />
                     <p>2201801636</p>
                     <p>Hans Nugroho Gianto Hadiwijaya</p>
                 </div>
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="rev_dev_script.js"></script>
-    <script type="text/javascript" src="tot_rev_script.js"></script>
-    <script type="text/javascript" src="gross_sales_script.js"></script>
-    <script type="text/javascript" src="prod_prof_script.js"></script>
-    <script type="text/javascript" src="prod_sold_script.js"></script>
-    <script type="text/javascript" src="prod_unit_script.js"></script>
-    <script type="text/javascript" src="prod_percent_script.js"></script>
-    <script type="text/javascript" src="prod_country_script.js"></script>
+    <script type="text/javascript" src="js/rev_dev_script.js"></script>
+    <script type="text/javascript" src="js/tot_rev_script.js"></script>
+    <script type="text/javascript" src="js/gross_sales_script.js"></script>
+    <script type="text/javascript" src="js/prod_prof_script.js"></script>
+    <script type="text/javascript" src="js/prod_sold_script.js"></script>
+    <script type="text/javascript" src="js/prod_unit_script.js"></script>
+    <script type="text/javascript" src="js/prod_percent_script.js"></script>
+    <script type="text/javascript" src="js/prod_country_script.js"></script>
 </body>
+
 </html>
