--- a/index.html
+++ b/index.html
@@ -145,17 +145,17 @@
         <div class="creator">
             <div class="row">
                 <div class="column">
-                    <img src="image/vanessa.jpg" />
+                    <img src="vanessa.jpg" />
                     <p>2201741385</p>
                     <p>Vanessa Louise</p>
                 </div>
                 <div class="column">
-                    <img src="image/nadhifa.jpg" />
+                    <img src="nadhifa.jpg" />
                     <p>2201742860</p>
                     <p>Nadhifa Rachma Zalfa Sekar Arum</p>
                 </div>
                 <div class="column">
-                    <img src="image/hans.jpg" />
+                    <img src="hans.jpg" />
                     <p>2201801636</p>
                     <p>Hans Nugroho Gianto Hadiwijaya</p>
                 </div>
