--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="overview-header">
         <h1>Product Summary</h1>
+        <h3>Period: September 2013 - December 2014</h3>
         <div class="row">
             <div class="column">
                 <div class="card">
